--- a/src/App.css
+++ b/src/App.css
@@ -41,27 +41,27 @@
   text-align: left;
   margin-top: 50px;
 }
-.header {
+.App-header {
   text-align: center;
 }
 
-.field {
+.todo-form {
   display: flex;
   gap: 20px;
   height: 40px;
   margin-left: 40px;
 }
 
-.field__add {
+.todo-form-field {
   border-radius: 10px;
   /* width: fit-content; */
 }
 
-.add {
+.todo-add {
   border-radius: 10px;
 }
 
-.completed {
+.todo-completed {
   display: flex;
   margin-left: 40px;
   margin-top: 30px;
@@ -70,7 +70,7 @@
   align-items: center;
 }
 
-.items {
+.todo-items {
   display: flex;
   flex-direction: column;
   margin: 20px 40px;
